[tool.poetry]
name = "podping-hivewatcher"
version = "1.0.0"
license = "MIT"
description = ""
authors = ["Brian of London <brian@podping.org>"]
readme="README.md"
keywords = ["hive", "blockchain", "podping", "podcasting20"]

[tool.poetry.dependencies]
python = "^3.8"
beem = "^0.24.26"
pyzmq = "^22.3.0"
single-source = "^0.2.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
flake8 = "^4.0.1"
single-source = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
